# ConvexHullAlgorithms

./: ANALISIS.txt  CMakeLists.txt  PreguntasT1.txt  README.txt  main.cpp
Algorithms/: ConvexHullAlgorithm.cpp  ConvexHullAlgorithm.h  GiftWrapping.cpp  GiftWrapping.h  QuickHull.cpp  QuickHull.h
Generators/: CirclePointsGenerator.cpp  CirclePointsGenerator.h  RandomPointsGenerator.cpp  RandomPointsGenerator.h
Geometry/: JVector.h  Point.h  Polygon.h  Segmento.h
